--- a/castle-gateway-zuul-dev.yml
+++ b/castle-gateway-zuul-dev.yml
@@ -1,3 +1,8 @@
 test:
   user:
-    name: cgabcdef
+    name: ggcgabcdef
+zuul:
+  routes: 
+    testRoute:
+      path: /testb
+      url: http://www.baidu.com
